#17 quarkus opt
- etcd env
- jar size opt
- hot reload fix on urlhandler