@@ -11,6 +11,10 @@
 
     <artifactId>qs-jpa-service</artifactId>
 
+    <properties>
+        <jvm.args>--add-opens=java.base/java.net=ALL-UNNAMED</jvm.args>
+    </properties>
+
     <dependencies>
 
         <!-- Project dependecies-->
@@ -65,6 +69,7 @@
             	</exclusion>
             </exclusions>
         </dependency>
+
 
         <!-- Quarkus hibernate -->
         <dependency>
@@ -183,6 +188,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
